<?xml version="1.0"?>
<package>
    <name>gps_kf</name>
    <version>0.0.3</version>
    <description>Kalman filter to fuse IMU with GPS</description>

    <maintainer email="gcross.code@icloud.com">gareth</maintainer>
    <license>Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>eigen_conversions</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>kr_math</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>rviz_helper</build_depend>

    <run_depend>eigen_conversions</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>kr_math</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>rviz_helper</run_depend>

    <export>
    </export>
</package>
